--- a/index.html
+++ b/index.html
@@ -8,35 +8,34 @@
 </head>
 
 <body>
-
+<!--
   <nav>
     <ul class="menu">
       <li><a href="#">Home</a></li>
-      <li><a href="#">Sobre</a></li>
-               
+      <li><a href="#">Sobre</a></li>               
       <li><a href="#">Produtos</a></li>
       <li><a href="#">Fale Conosco</a></li>
   </ul>
   </nav>
-<!--
+-->
+  <header>
     <nav>
-      <a><img scr="fotos/logo.png" width="150" alt=""></a>
-      <ul class="menu">
+      <a><img scr="fotos/logo.png" width="450" alt=""></a>
+      <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Produtos</a></li>
         <li><a href="#">Fale Conosco</a></li>
       </ul>
     </nav>
-  -->
+  </header>
     <main>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.0417564369595!2d-43.28241878520287!3d-22.837944585046838!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997b97458fa9c9%3A0x6bfe3ada27f00c37!2sR.%20Nicar%C3%A1gua%2C%20630%20-%20Penha%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2021020-050!5e0!3m2!1spt-BR!2sbr!4v1665966319997!5m2!1spt-BR!2sbr" width="600" height="450" ></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.0417564369595!2d-43.28241878520287!3d-22.837944585046838!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997b97458fa9c9%3A0x6bfe3ada27f00c37!2sR.%20Nicar%C3%A1gua%2C%20630%20-%20Penha%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2021020-050!5e0!3m2!1spt-BR!2sbr!4v1665966319997!5m2!1spt-BR!2sbr" width="600" height="450" ></iframe>
       <div class="container">
         <div id="caixalink">
           <a href="https://facebook.com/" target="_blank"><img src="fotos/facebook.png" class="imglink"></a>
           <a href="https://instagram.com/" target="_blank"><img src="fotos/instagram.jpeg" class="imglink"></a>
         </div>
-        <hr>
         <form>
           <legend>Envie uma mensagem para nós</legend>
           <div class="linha">
@@ -47,7 +46,8 @@
           <textarea placeholder="Digite aqui sua mensagem"></textarea>
           <button>Enviar</button>
         </form>
-  </main>
+      </div>
+    </main>
 </body>
 </html>
 
